[gd_scene load_steps=44 format=3 uid="uid://cr26d0j7jcbgv"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_658fq"]
[ext_resource type="Texture2D" uid="uid://dm4c1d5i54vc3" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/04-Fall/Fall 01.png" id="2_kbcf7"]
[ext_resource type="Texture2D" uid="uid://cewxnkswgun35" path="res://assets/Captain Clown Nose/Captain Clown Nose with Sword/16-Attack 2/Attack 2 01.png" id="2_ny5jo"]
[ext_resource type="Texture2D" uid="uid://b5lh5stki7w58" path="res://assets/Captain Clown Nose/Captain Clown Nose with Sword/16-Attack 2/Attack 2 02.png" id="3_kh0lb"]
[ext_resource type="Texture2D" uid="uid://bcl5mdqtgk0s8" path="res://assets/Captain Clown Nose/Captain Clown Nose with Sword/16-Attack 2/Attack 2 03.png" id="4_aak4b"]
[ext_resource type="Texture2D" uid="uid://b2bwn6t7gfy07" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 01.png" id="4_hpoo4"]
[ext_resource type="Texture2D" uid="uid://c6lbhjeinr3pn" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 02.png" id="5_45rq3"]
[ext_resource type="Texture2D" uid="uid://bn3667v38vpw1" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 03.png" id="6_hqhq2"]
[ext_resource type="Texture2D" uid="uid://0n7jb2tp6ian" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 04.png" id="7_dg03v"]
[ext_resource type="Texture2D" uid="uid://b1joijc10qic4" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 05.png" id="8_or38o"]
[ext_resource type="Texture2D" uid="uid://dlukt6t2vgom0" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 01.png" id="14_qqvcw"]
[ext_resource type="Texture2D" uid="uid://cmyew3wa084df" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 02.png" id="15_584we"]
[ext_resource type="Texture2D" uid="uid://bx70rn6ukiius" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 03.png" id="16_qjp3j"]
[ext_resource type="Texture2D" uid="uid://dm8w2g0sc0hsw" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 01.png" id="20_xip67"]
[ext_resource type="Texture2D" uid="uid://bib7qc36e5twc" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 02.png" id="21_avu7k"]
[ext_resource type="Texture2D" uid="uid://bs0i0a8p7illr" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 03.png" id="22_g0o7f"]
[ext_resource type="Texture2D" uid="uid://dj0sdo1wu0i2h" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 04.png" id="23_iblef"]
[ext_resource type="Texture2D" uid="uid://bkko7gfahuskb" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 05.png" id="24_1xykx"]
[ext_resource type="Texture2D" uid="uid://c6qrx5b5d0rt3" path="res://assets/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 06.png" id="25_bgf2y"]
[ext_resource type="Script" path="res://scripts/fsm/fsm.gd" id="32_u8wb1"]
[ext_resource type="Script" path="res://scripts/player/States/player_idle_state.gd" id="33_bqccs"]
[ext_resource type="Script" path="res://scripts/player/States/player_run_state.gd" id="34_t7ayo"]
[ext_resource type="AudioStream" uid="uid://dqp5mf1sy6fto" path="res://assets/Sounds/Steps_1.wav" id="35_ihpyr"]
[ext_resource type="Script" path="res://scripts/player/States/player_jump_state.gd" id="36_7trri"]
[ext_resource type="AudioStream" uid="uid://psn5v8r73puf" path="res://assets/Sounds/Jump_3.wav" id="37_7io0c"]
[ext_resource type="Script" path="res://scripts/player/States/player_fall_state.gd" id="38_ussdm"]
[ext_resource type="AudioStream" uid="uid://d0tn5pqlsoshu" path="res://assets/Sounds/Steps_2.wav" id="39_k5yxk"]
[ext_resource type="Script" path="res://scripts/player/input_handler.gd" id="40_4f5lp"]
[ext_resource type="Script" path="res://scripts/player/States/player_attack_state.gd" id="40_wskhc"]
[ext_resource type="Script" path="res://scripts/player/States/player_throw_state.gd" id="44_3lp0k"]
[ext_resource type="PackedScene" uid="uid://3ciajv5607p5" path="res://components/HitBox/hit_box.tscn" id="46_fvb7h"]
[ext_resource type="PackedScene" uid="uid://bcvrlnocn57at" path="res://components/HurtBox/hurt_box.tscn" id="47_x3k2m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vuhd4"]
radius = 9.25

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ol4w0"]
radius = 9.0

[sub_resource type="Animation" id="Animation_yv6vd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_hpoo4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/HitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10.75, -9)]
}

[sub_resource type="Animation" id="Animation_kcl11"]
resource_name = "attack"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_ny5jo"), ExtResource("3_kh0lb"), ExtResource("4_aak4b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/HitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10.75, -9), Vector2(17, 4)]
}

[sub_resource type="Animation" id="Animation_wprao"]
resource_name = "fall"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kbcf7")]
}

[sub_resource type="Animation" id="Animation_dmmai"]
resource_name = "idle"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_hpoo4"), ExtResource("5_45rq3"), ExtResource("6_hqhq2"), ExtResource("7_dg03v"), ExtResource("8_or38o")]
}

[sub_resource type="Animation" id="Animation_r2om6"]
resource_name = "jump"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("14_qqvcw"), ExtResource("23_iblef"), ExtResource("15_584we"), ExtResource("16_qjp3j")]
}

[sub_resource type="Animation" id="Animation_vr7bo"]
resource_name = "run"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("20_xip67"), ExtResource("21_avu7k"), ExtResource("22_g0o7f"), ExtResource("23_iblef"), ExtResource("24_1xykx"), ExtResource("25_bgf2y")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vt82v"]
_data = {
"RESET": SubResource("Animation_yv6vd"),
"attack": SubResource("Animation_kcl11"),
"fall": SubResource("Animation_wprao"),
"idle": SubResource("Animation_dmmai"),
"jump": SubResource("Animation_r2om6"),
"run": SubResource("Animation_vr7bo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjknf"]
size = Vector2(14, 20)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_flllh"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
collision_mask = 3
script = ExtResource("1_658fq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_hpoo4")

[node name="HitBox" parent="Sprite2D" instance=ExtResource("46_fvb7h")]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HitBox"]
position = Vector2(10.75, -9)
shape = SubResource("CircleShape2D_vuhd4")

[node name="HurtBox" parent="Sprite2D" instance=ExtResource("47_x3k2m")]
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_ol4w0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vt82v")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_wjknf")

[node name="FSM" type="Node" parent="."]
script = ExtResource("32_u8wb1")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("33_bqccs")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("34_t7ayo")

[node name="RunSFX" type="AudioStreamPlayer" parent="FSM/Run"]
stream = ExtResource("35_ihpyr")
bus = &"SFX"

[node name="RunTimer" type="Timer" parent="FSM/Run"]
wait_time = 0.3

[node name="Jump" type="Node" parent="FSM"]
script = ExtResource("36_7trri")

[node name="JumpSFX" type="AudioStreamPlayer" parent="FSM/Jump"]
stream = ExtResource("37_7io0c")
bus = &"SFX"

[node name="Fall" type="Node" parent="FSM"]
script = ExtResource("38_ussdm")

[node name="CoyoteTimer" type="Timer" parent="FSM/Fall"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="LandingSFX" type="AudioStreamPlayer" parent="FSM/Fall"]
stream = ExtResource("39_k5yxk")
bus = &"SFX"

[node name="Attack" type="Node" parent="FSM"]
script = ExtResource("40_wskhc")

[node name="Throw" type="Node" parent="FSM"]
script = ExtResource("44_3lp0k")

[node name="ThrowingBufferTimer" type="Timer" parent="FSM/Throw"]
wait_time = 0.2

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("40_4f5lp")

[node name="JumpBufferTimer" type="Timer" parent="InputHandler"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 540
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.25
drag_top_margin = 0.25
drag_right_margin = 0.25
drag_bottom_margin = 0.25
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Projects" type="Node" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
process_mode = 3
replication_config = SubResource("SceneReplicationConfig_flllh")

[connection signal="timeout" from="FSM/Run/RunTimer" to="FSM/Run" method="_on_run_timer_timeout"]
[connection signal="timeout" from="FSM/Throw/ThrowingBufferTimer" to="FSM/Throw" method="_on_throwing_buffer_timer_timeout"]
